# Sentinel

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
docs/: ARCHITECTURE.md
src/: CMakeLists.txt  main.cpp
src/Sentinel/Bedrock/: CrashInterceptor.cpp  CrashInterceptor.hpp
src/Sentinel/Utils/: Logger.cpp  Logger.hpp
tests/: CMakeLists.txt
